teste de agenda

--- a/public/agenda/agenda.html
+++ b/public/agenda/agenda.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Agenda</title>
 </head>
 <body>
     
+  <header>
+    <h1>Agenda Art Life. BH </h1>
+    <p>Confira os próximos eventos e exposições</p>
+  </header>
+
+  <main class="agenda">
+    <section class="evento">
+      <img src="/public/img/exposiçaoabstrata.png" alt="Exposição Arte Moderna">
+      <div class="conteudo">
+        <h2>Exposição Arte Moderna</h2>
+        <p class="data">05/09/2025 - 20/10/2025</p>
+        <p class="descricao">Uma mostra exclusiva com obras de artistas brasileiros que marcaram o modernismo.</p>
+      </div>
+    </section>
+
+    <section class="evento">
+      <img src="/public/img/oficina.png" alt="Oficina de Escultura">
+      <div class="conteudo">
+        <h2>Oficina de Escultura</h2>
+        <p class="data">12/09/2025 - 14h às 18h</p>
+        <p class="descricao">Workshop interativo com escultores renomados. Vagas limitadas.</p>
+      </div>
+    </section>
+
+    <section class="evento">
+      <img src="/public/img/Concerto.png" alt="Concerto no Jardim">
+      <div class="conteudo">
+        <h2>Concerto no Jardim</h2>
+        <p class="data">22/09/2025 - 19h</p>
+        <p class="descricao">Apresentação ao ar livre com repertório clássico e contemporâneo.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Museu de Arte - Todos os direitos reservados</p>
+  </footer>
 </body>
 </html>
