teste de visitaçao

--- a/public/visitaçao/visitacao.html
+++ b/public/visitaçao/visitacao.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Visitacao</title>
 </head>
 <body>
-    
+    <header>
+    <h1>Art Life.BH</h1>
+  </header>
+
+  <main>
+    <h2>Informações de Visitação</h2>
+    <p>Planeje sua visita ao museu Art Life.BH. Confira horários, valores e localização.</p>
+
+    <section class="info">
+      <h3>Horários</h3>
+      <ul>
+        <li>Terça a Domingo: <strong>10h às 18h</strong></li>
+        <li>Segunda-feira: <strong>Fechado</strong></li>
+      </ul>
+    </section>
+
+    <section class="info">
+      <h3>Ingressos</h3>
+      <ul>
+        <li>Inteira: <strong>R$ 20,00</strong></li>
+        <li>Meia-entrada: <strong>R$ 10,00</strong> (estudantes, idosos, professores)</li>
+        <li>Crianças até 5 anos: <strong>Entrada gratuita</strong></li>
+      </ul>
+    </section>
+
+    <section class="info">
+      <h3>Localização</h3>
+      <p>Rua Exemplo, 123 — Centro, Belo Horizonte - MG</p>
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.286979438054!2d-43.938356!3d-19.920433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa699f7!2sPraça%20da%20Liberdade!5e0!3m2!1spt-BR!2sbr!4v0000000000"
+        width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy">
+      </iframe>
+    </section>
+
+    <section class="info">
+      <h3>Recomendações</h3>
+      <ul>
+        <li>Não é permitido fotografar com flash.</li>
+        <li>Mochilas grandes devem ser deixadas no guarda-volumes.</li>
+        <li>Alimentos e bebidas não são permitidos dentro das salas de exposição.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Art Life.BH — Museu de Arte. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
