teste de destaques

--- a/public/destaques/destaques.html
+++ b/public/destaques/destaques.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Destaques</title>
 </head>
 <body>
-    
+    <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Destaques • Art Life.BH</title>
+  <link rel="stylesheet" href="destaques.css">
+</head>
+<body>
+  <header>
+    <h1>Art Life.BH</h1>
+
+  </header>
+
+  <main>
+    <h2>Obras e Exposições em Destaque</h2>
+    <p>Confira os principais destaques atuais do nosso museu.</p>
+
+    <section class="destaques">
+      <div class="card">
+        <img src="/public/img/quadromoderno.png" alt="Quadro Moderno">
+        <h3>Abstrações Modernas</h3>
+        <p>Uma seleção de obras que exploram cores, formas e emoções na arte moderna brasileira.</p>
+      </div>
+
+      <div class="card">
+        <img src="/public/img/esculturabronze.png" alt="Escultura em Bronze">
+        <h3>Escultura em Bronze</h3>
+        <p>Peça única em bronze, representando a força e delicadeza do corpo humano.</p>
+      </div>
+
+      <div class="card">
+        <img src="/public/img/fotografiaurbana.png" alt="Exposição de Fotografia">
+        <h3>Olhares Urbanos</h3>
+        <p>Exposição de fotografia contemporânea que retrata a vida nas cidades brasileiras.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Art Life.BH — Museu de Arte. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
